--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.13.5",
+    "@tanstack/react-router": "^1.139.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
